--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,18 @@
         "psr-4": {"bandwidthThrottle\\tokenBucket\\": "classes/"}
     },
     "require": {
-        "php": ">=5.6",
-        "malkusch/lock": "^1|^2",
+        "php": ">=8.1",
+        "malkusch/lock": "^2",
         "ext-bcmath":"*"
     },
     "require-dev": {
-        "ext-redis": "^2.2.4|^3",
-        "predis/predis": "^1",
-        "phpunit/phpunit": "^5",
-        "mikey179/vfsStream": "^1.5.0",
-        "php-mock/php-mock-phpunit": "^1"
+        "ext-redis": "^5",
+        "ext-sysvshm": "*",
+        "ext-sysvsem": "*",
+        "predis/predis": "^2.0",
+        "phpunit/phpunit": "^10",
+        "mikey179/vfsstream": "^1.6.0",
+        "php-mock/php-mock-phpunit": "^2.0"
     },
     "archive": {
         "exclude": ["/tests"]
