--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "ext-redis": "^2.2.4|^3",
         "predis/predis": "^1",
         "phpunit/phpunit": "^5",
-        "mikey179/vfsStream": "^1.5.0",
+        "mikey179/vfsstream": "^1.5.0",
         "php-mock/php-mock-phpunit": "^1"
     },
     "archive": {
